# web-app-er

./: LICENSE  README.md  pyproject.toml
src/: html.py  model.py
static/css/: main.css
templates/: form.html
