[tool.poetry]
name = "web-app-er"
version = "0.1.0"
description = ""
authors = ["shvand <andriyshvorak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-multipart = "^0.0.5"
jinja2 = "^3.1.2"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
aiofiles = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
